--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ width:360px;
 	border-color:rgba(255, 215, 0);
 	top:400px;
         z-index:999999;
-	position:absolute;
+	position:relative;
         border-width:thick;
         border-radius:50px;
         background-image:url(' https://inspgr.id/app/uploads/2018/10/illustration-iancarlo-reyes-11-757x1000.jpg ');
